# Image_processor

./: add_basic_filters.cpp  filter_table.cpp  filter_table.h  image.h  pipeline.cpp  pipeline.h
filters/: edge_detection_filter.cpp  filter.cpp  gauss_blur_filter.h  grayscale_filter.h  negative_filter.h  pixelation_filter.cpp  pixelation_filter.h  sharpening_filter.cpp  sharpening_filter.h
image_processor/: CMakeLists.txt  add_basic_filters.h  bmp_utils.cpp  bmp_utils.h  image.cpp  image_processor.cpp  test.cpp
image_processor/filters/: crop_filter.cpp  crop_filter.h  edge_detection_filter.h  filter.h  gauss_blur_filter.cpp  grayscale_filter.cpp  negative_filter.cpp
