set(CMAKE_CXX_STANDARD 20)

add_executable(
        image_processor
        image_processor.cpp
        pipeline.h
        pipeline.cpp
        bmp_utils.h
        bmp_utils.cpp
        image.h
        image.cpp
        filter_table.h
        filter_table.cpp
        filters/filter.h
        filters/filter.cpp
        add_basic_filters.h
        add_basic_filters.cpp
        filters/crop_filter.h
        filters/crop_filter.cpp
        filters/grayscale_filter.h
        filters/grayscale_filter.cpp
        filters/negative_filter.h
        filters/negative_filter.cpp
        filters/sharpening_filter.h
        filters/sharpening_filter.cpp
        filters/edge_detection_filter.h
        filters/edge_detection_filter.cpp
        filters/gauss_blur_filter.cpp
        filters/gauss_blur_filter.h
        filters/pixelation_filter.cpp
        filters/pixelation_filter.h)


add_catch(test_image_processor test.cpp
        pipeline.h
        pipeline.cpp
        bmp_utils.h
        bmp_utils.cpp
        image.h
        image.cpp
        filter_table.h
        filter_table.cpp
        filters/filter.h
        filters/filter.cpp
        add_basic_filters.h
        add_basic_filters.cpp
        filters/crop_filter.h
        filters/crop_filter.cpp
        filters/grayscale_filter.h
        filters/grayscale_filter.cpp
        filters/negative_filter.h
        filters/negative_filter.cpp
        filters/sharpening_filter.h
        filters/sharpening_filter.cpp
        filters/edge_detection_filter.h
        filters/edge_detection_filter.cpp
        filters/gauss_blur_filter.cpp
        filters/gauss_blur_filter.h
        filters/pixelation_filter.cpp
        filters/pixelation_filter.h)